tests/invalid/codegen/compile_error_and_compile_warn.ri
fn main() {
    compile_warn!("a simple warn");
    compile_error!("a simple error");
}
