tests/invalid/codegen/compile_error_and_compile_warn.out
tests/failing/codegen/compile_error_and_compile_warn.ri:2:5: warning: a simple warn
    |
  2 |     compile_warn!("a simple warn");
    |     ^
tests/failing/codegen/compile_error_and_compile_warn.ri:3:5: error: a simple error
    |
  3 |     compile_error!("a simple error");
    |     ^
rivetc: error: could not compile package `core`, aborting due to previous error; 1 warning emitted